rename entities directory, changer .env file, change main file, add swager doc, add custom validation email

--- a/.env
+++ b/.env
@@ -1,3 +1,13 @@
+# for use in dev, copy this file and rename it to ".env.dev" and run yarn start:dev.
+# and change the value in file "./database/config/typeorm-cli.config.ts" 
+# "config({ path: `.env.dev` });" 
+
+# for use in prod complete this file and run yarn start:prod.
+# and change the value in file "./database/config/typeorm-cli.config.ts" 
+# "config({ path: `.env` });" 
+
+# be careful this file is comit
+
 DB_HOST=
 DB_PORT=
 DB_USERNAME=
