--- a/package.json
+++ b/package.json
@@ -35,7 +35,10 @@
       "@nestjs/typeorm": "^9.0.1",
       "class-transformer": "^0.5.1",
       "class-validator": "^0.13.2",
+      "cookie-parser": "^1.4.6",
+      "csurf": "^1.11.0",
       "dotenv": "^16.0.3",
+      "express-session": "^1.17.3",
       "mysql2": "^2.3.3",
       "pg": "^8.4.0",
       "reflect-metadata": "^0.1.13",
